--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,18 +20,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailsActivity"
+        <activity
+            android:name=".DetailsActivity"
             android:label="Movies"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".MainActivity"
-            tools:targetApi="jelly_bean" />
-        <activity android:name=".SettingsActivity" />
-
-        <meta-data
+            tools:targetApi="jelly_bean">
+            <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"/>
-
-
+                android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".SettingsActivity"
+            android:label="Settings" />
     </application>
 
 </manifest>
